Fix alignment issue on mobile view of paragraphs in Home page

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -191,7 +191,7 @@ body {
           }
           &__descriptions {
               padding-bottom: 100px;
-              
+              margin-left: 8%;
           }
       }
       
